--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,78 +26,29 @@ display: flex;
 gap: 0.3rem;
 }
 
-
-
-
-.scroll-text {
-    text-align: right;
-  
-    /* animation properties */
-    -moz-transform: translateX(-100%);
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
-    
-    -moz-animation: my-animation 15s linear infinite;
-    -webkit-animation: my-animation 15s linear infinite;
-    animation: my-animation 15s linear infinite;
-  }
-  
-  /* for Firefox */
-  @-moz-keyframes my-animation {
-    from { -moz-transform: translateX(-100%); }
-    to { -moz-transform: translateX(100%); }
-  }
-  
-  /* for Chrome */
-  @-webkit-keyframes my-animation {
-    from { -webkit-transform: translateX(-100%); }
-    to { -webkit-transform: translateX(100%); }
-  }
-  
-  @keyframes my-animation {
-    from {
-      -moz-transform: translateX(-100%);
-      -webkit-transform: translateX(-100%);
-      transform: translateX(-100%);
-    }
-    to {
-      -moz-transform: translateX(100%);
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
-    }
-  }
-
-.mob{
-    display: none;
-}
-.dektop{
-    display: block;
-}
+.mob{display: none;}
+.dektop{display: block;}
 
 @media screen and (max-width:924px) {
 
     
-.mob{
-    display: block;
-}
-.desktop{
-    display: none;
-}
+.mob{display: block;}
+.desktop{display: none;}
 
-    .topo-mibrasil{
-    display: flex;
-    gap: 1rem;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    background: #ff6900;
-    width: 100%;
-    height: 2rem;
-    color: #fff;
-    font-family: "Camphor Pro";
-    font-size: 0.7rem;
-    }
+.topo-mibrasil{
+display: flex;
+gap: 1rem;
+flex-direction: row;
+flex-wrap: nowrap;
+justify-content: center;
+align-items: center;
+background: #ff6900;
+width: 100%;
+height: 2rem;
+color: #fff;
+font-family: "Camphor Pro";
+font-size: 0.7rem;
+}
 
 
 
