--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,15 @@ box-sizing: border-box;
 @import url("https://i02.appmifile.com/i18n/fonts/CamphorPro/vf/index.css");
 @import url("https://i02.appmifile.com/i18n/fonts/CamphorPro/woff2/index.css");
 
-.topo-mibrasil{
+.topo-mibrasil {
 display: flex;
-
 flex-direction: row;
 flex-wrap: nowrap;
 background: #ff6900;
 color: #fff;
 font-family: "Camphor Pro";
+justify-content: center;
+gap: 1rem;
 }
 
 .grid-icon-info{
@@ -26,7 +27,6 @@ gap: 0.3rem;
 .dektop{display: block;}
 
 @media screen and (max-width:924px) {
-
     
 .mob{display: block;}
 .desktop{display: none;}
@@ -43,7 +43,13 @@ color: #fff;
 font-family: "Camphor Pro";
 }
 
+.galeria{margin-left: 25% }
 
-
+.galeria,
+*[class^="galeria"] {
+  display: inline-block;
+  white-space: nowrap;
+  position: absolute;
+}
     
 }
