--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,30 +62,22 @@ text-align: center;
 margin-top: 1rem;
 }
 
-.item-1{
-	animation-name: anim-1;
-}
-
-.item-2{
-	animation-name: anim-2;
-}
-
-.item-3{
-	animation-name: anim-3;
-}
+.item-1{animation-name: anim-1;}
+.item-2{animation-name: anim-2;}
+.item-3{animation-name: anim-3;}
 
 .item-1, 
 .item-2, 
 .item-3 {
 position: absolute;
 display: block;  
-animation-duration: 10s;
+animation-duration: 15s;
 animation-timing-function:ease;
 animation-iteration-count: infinite;
 }
 
 @keyframes anim-1 {
-  0%, 8.3% { left: -100%; opacity: 0; }
+  0%, 8.3% { left: -90%; opacity: 0; }
   8.3%,25% { left: 25%; opacity: 1; }
   33.33%, 100% { left: 110%; opacity: 0; }
 }
